# fa_2

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  reqs.txt
code/: adapters.py  decorators.py  main.py  pyproject.toml  settings.py
code/api/: router.py  schemas.py
code/api/article/: routes.py
code/db/: conf.py  custom_fields.py  models.py  repository.py
code/exceptions/: handlers.py  http.py
migrations/models/: 0_20231223050631_init.py  1_20231223051849_update.py  2_20231223051924_update.py  3_20231223052334_update.py  4_20231223052353_update.py
minio/data/.minio.sys/: format.json
minio/data/fa-2/logos/js logo.jpeg/92cc1e8d-ceb2-4b20-bac5-7410a1961905/: part.1
minio/data/fa-2/pereryv_logo.jpeg/7cd228be-7f75-468d-8bd0-e9aa202dec3f/: part.1
src/app/: main.py
src/app/api/: router.py
src/app/core/: settings.py
src/app/db/: conf.py  models.py
src/app/exceptions/: common.py  http.py
src/migrations/models/: 0_20231114145257_init.py
